tests/compile_fails/dissolve_bare_attribute.rs
use dissolve_derive::Dissolve;

#[derive(Dissolve)]
#[dissolve]
struct BareAttribute {
    field: String,
}

fn main() {}
